--- a/package.json
+++ b/package.json
@@ -1,24 +1,38 @@
 {
   "name": "tuia-animation",
+  "description": "提供通用less动画animation",
   "version": "0.1.0",
   "private": true,
+  "main": "lib/index.js",
+  "module": "es/index.js",
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "concurrently --kill-others-on-fail \"npm:dev-*\"",
+    "dev-demo": "vue-cli-service serve",
+    "dev-docs": "vuepress dev docs --open",
+    "dev-copy": "node plugins/fs-copy",
+    "docs:build": "vuepress build docs",
     "build": "vue-cli-service build",
+    "build:watch": "vue-cli-service build --watch",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "postcss": "^8.3.1",
+    "vue": "^2.6.14",
+    "vue-loader": "^16.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.0",
     "@vue/cli-plugin-eslint": "^4.5.0",
     "@vue/cli-service": "^4.5.0",
+    "@vue/compiler-sfc": "^3.1.1",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "less": "^4.1.1",
+    "less-loader": "^5.0.0",
+    "vue-template-compiler": "^2.6.14",
+    "vuepress": "^1.8.2"
   },
   "eslintConfig": {
     "root": true,
