--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "postcss": "^8.3.1",
+    "postcss-px2rem-exclude": "^0.0.6",
     "vue": "^2.6.14",
     "vue-loader": "^16.1.2"
   },
