--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: GitHub Actions Build and Deploy Doc
+name: CI
 
 # Controls when the workflow will run
 on:
@@ -21,11 +21,11 @@ jobs:
       - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
         run: |
           yarn install
-          yarn docs:build
+          yarn build
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.4
         with:
           BRANCH: gh-pages # The branch the action should deploy to.
-          FOLDER: docs/dist # The folder the action should deploy.
+          FOLDER: dist # The folder the action should deploy.
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
