--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -24,5 +24,5 @@ jobs:
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
           TARGET_REPO: tuia-fed/tuia-animation-less
           TARGET_BRANCH: gh-pages
-          BUILD_SCRIPT: yarn install && yarn docs:build
+          BUILD_SCRIPT: yarn install yarn build && node plugins/fs-copy && yarn docs:build
           BUILD_DIR: docs/dost
