--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -17,6 +17,12 @@ jobs:
         uses: actions/checkout@v2
         with:
           persist-credentials: false
+        
+      - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
+        run: |
+          yarn install
+          yarn build
+          node plugins/fs-copy
 
       - name: Deploy 🚀
         uses: jenkey2011/vuepress-deploy@c125854a55a2d3fbe1847e0fc25a4aa662582520
@@ -24,5 +30,5 @@ jobs:
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
           TARGET_REPO: tuia-fed/tuia-animation-less
           TARGET_BRANCH: gh-pages
-          BUILD_SCRIPT: yarn install yarn build && node plugins/fs-copy && yarn docs:build
+          BUILD_SCRIPT: yarn docs:build
           BUILD_DIR: docs/dost
