--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,6 @@
-name: CI
+# This is a basic workflow to help you get started with Actions
+
+name: GitHub Actions Build and Deploy Doc
 
 # Controls when the workflow will run
 on:
@@ -15,15 +17,17 @@ jobs:
         uses: actions/checkout@v2
         with:
           persist-credentials: false
-
+        
       - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
         run: |
           yarn install
           yarn build
-
+          node plugins/fs-copy
       - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@4.1.4
+        uses: jenkey2011/vuepress-deploy@c125854a55a2d3fbe1847e0fc25a4aa662582520
         with:
-          BRANCH: gh-pages # The branch the action should deploy to.
-          FOLDER: dist # The folder the action should deploy.
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          TARGET_REPO: tuia-fed/tuia-animation-less
+          TARGET_BRANCH: gh-pages
+          BUILD_SCRIPT: yarn docs:build
+          BUILD_DIR: docs/dist
