--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,9 +21,9 @@ jobs:
       - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
         run: |
           yarn install
-          yarn build
           node plugins/fs-copy
-      - name: Deploy 🚀
+          
+      - name: Deploy docs🚀
         uses: jenkey2011/vuepress-deploy@c125854a55a2d3fbe1847e0fc25a4aa662582520
         with:
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
@@ -31,3 +31,11 @@ jobs:
           TARGET_BRANCH: gh-pages
           BUILD_SCRIPT: yarn docs:build
           BUILD_DIR: docs/dist
+          
+      - name: Deploy vuehtml 🚀
+        uses: JamesIves/github-pages-deploy-action@4.1.4
+        with:
+          BRANCH: gh-pages # The branch the action should deploy to.
+          FOLDER: dist # The folder the action should deploy.
+          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+
