--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,19 +11,13 @@ jobs:
         uses: actions/checkout@v2
         with:
           persist-credentials: false
-        
-      - name: Install and Build 🔧 
-        run: |
-          yarn install
-          node plugins/fs-copy
-          
       - name: Deploy 🚀
-        uses: jenkey2011/vuepress-deploy@c125854a55a2d3fbe1847e0fc25a4aa662582520
+        uses: jenkey2011/vuepress-deploy@v1.8.1
         with:
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
           TARGET_REPO: tuia-fed/tuia-animation-less
           TARGET_BRANCH: gh-pages
-          BUILD_SCRIPT: yarn docs:build
+          BUILD_SCRIPT: yarn && node plugins/fs-copy && yarn docs:build
           BUILD_DIR: docs/dist
     
   build-and-deploy-vue:
