feat: update ci.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,8 +15,8 @@ jobs:
         uses: jenkey2011/vuepress-deploy@v1.8.1
         with:
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-          BUILD_SCRIPT: yarn && node plugins/fs-copy && yarn docs:build
-          BUILD_DIR: docs/dost/
+          BUILD_SCRIPT: yarn && yarn docs:build
+          BUILD_DIR: docs/dist/
     
   build-and-deploy-vue:
     runs-on: ubuntu-latest
