--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "serve": "concurrently --kill-others-on-fail \"npm:dev-*\"",
     "dev-demo": "vue-cli-service serve",
     "dev-docs": "vuepress dev docs --open",
-    "dev-copy": "node plugins/fs-copy",
+    "dev-copy": "NODE_ENV=development node plugins/fs-copy",
+    "copy:build": "NODE_ENV=production node plugins/fs-copy",
     "docs:build": "NODE_ENV=production vuepress build docs",
     "build": "NODE_ENV=production vue-cli-service build",
     "build:watch": "vue-cli-service build --watch",
