--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,13 +15,13 @@ jobs:
         run: |
           yarn install
           yarn copy:build
+          yarn docs:build
       - name: Deploy 🚀
-        uses: jenkey2011/vuepress-deploy@v1.8.1
+        uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
           TARGET_BRANCH: gh-pages
-          BUILD_SCRIPT: yarn docs:build
-          BUILD_DIR: docs/dist
+          FOLDER: docs/dist
     
   build-and-deploy-vue:
     runs-on: ubuntu-latest
